removed tournament round association